<resources>
    <string></string>
    <string name="app_name">My Application</string>
    <string name="start_button">Start\nTimer</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="total_points">Total points</string>
    <string name="session_points">Session points</string>
    <string name="session_time">Session Time</string>
    <string name="goal_time">Goal Time</string>
    <string name="tot">Java</string>
    <string name="sesh_pot">Java</string>
    <string name="sesh_time">Java</string>
    <string name="goal">Java</string>
    <string name="history">History</string>
    <string name="back">back</string>
    <string name="recent">Recent Scores</string>
    <string name="score0">Score</string>
    <string name="score1">Score</string>
    <string name="score2">Score</string>
    <string name="score3">Score</string>
    <string name="score4">Score</string>
    <string name="score5">Score</string>
    <string name="date1">Date</string>
    <string name="date2">Date</string>
    <string name="date3">Date</string>
    <string name="date4">Date</string>
    <string name="date5">Date</string>
    <string name="date6">Date</string>

</resources>