<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttons"
            android:text="@string/back"
            android:textSize="25sp"
            android:gravity="center_horizontal|center_vertical"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/History"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/history"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/Highscores"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/recent"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date1"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:text="@string/date1"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/date2"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/date2"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/date3"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/date3"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/date4"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/date4"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/date5"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/date5"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/date6"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/date6"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/score0"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:text="@string/score0"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/score1"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/score1"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/score2"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/score2"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/score3"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/score3"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/score4"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/score4"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/score5"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/score5"
                    android:textSize="25sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <!-- This FrameLayout insets its children based on system windows using
             android:fitsSystemWindows. -->
</LinearLayout>
